# An-Implementation-of-Eratosthenes-Sieve

./: CMakeLists.txt  FindSmallerPrimes.pro  calculateprimes.cpp  main.cpp  terminalinputoutput.h
src/: calculateprimes.cpp  calculateprimes.h  terminalinputoutput.cpp  terminalinputoutput.h
test/: CMakeCache.txt  EratosthenesSieveImplementation  Makefile  cmake_install.cmake
